# MGnifyMiner

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yaml
MGnifyMiner/: hmmer_search.py
mgyminer/: __main__.py  api.py  app.py  bigquery.py  cli.py  config.py  constants.py  fasta.py  filter.py  gui.py  metadata.py  parsers.py  phmmer.py  phylplot.py  phyltree.py  plots.py  plotting.py  proteinTable.py  proteintable.py  search.py  sequencesearch.py  setup.py  structure.py  utils.py  version.py
mgyminer/dashboard/: app.py
mgyminer/dashboard/assets/: main.css
mgyminer/dashboard/callbacks/: overview_callbacks.py  phylogeny_callbacks.py
mgyminer/dashboard/pages/: overview.py  phylogeny.py
mgyminer/dashboard/utils/: data_store.py
mgyminer/gui/: content.py  index.py
mgyminer/gui/assets/: dashboard.css
mgyminer/gui/cache/: cache.db
mgyminer/gui/layout/: dashboard.py  dashboard_callbacks.py  header.py
mgyminer/gui2/: app.py  server.py
mgyminer/gui2/assets/: main.css
mgyminer/gui2/callbacks/: alignment_callbacks.py  filter_callbacks.py  metadata_callbacks.py  page_routing.py  phylogeny_callbacks.py  scatter_callbacks.py  statsbar_callbacks.py
mgyminer/plots/: sequencefeature.py  tree.py  upset.py
mgyminer/wrappers/: _base.py  hmmer.py
tests/: conftest.py  helpers.py  test_constants.py  test_fasta.py  test_filter.py  test_hmmer.py  test_modules.py  test_parsers.py  test_proteinTable.py  test_proteintable.py  test_sequencesearch.py  test_structure.py  test_tree.py  test_utils.py
tests/data/: alignment.json  alignment.sto  domTable.txt  phmmer_out.txt  phmmer_output.csv  phmmer_results.csv  results_with_metadata.csv  tree.nwk
(+13 files in other folders)
