[metadata]
name = MgnifyMiner
version = attr: mgyminer.__version__
author = Felix Langer
author_email = felix@ebi.ac.uk
url = https://github.com/FelixLanger/MGnifyMiner
description = Tool to mine the MGnify Protein Database
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
python_requires = >=3.6
setup_requires =
  setuptools >=46.4.0
install_requires =
  aiohttp-client-cache ~=0.7.3
  PyYAML ~=6.0
  mysql-connector-python ~=8.0.30
  numpy ~=1.23.2
  pandas ~=1.4.3
  biopython ~=1.79
  diskcache ~=5.4.0
  plotly ~=5.10.0
  dash ~=2.6.1
  requests ~=2.28.1

[options.entry_points]
console_scripts =
  MGnifyMiner = mgyminer.__main__:main

[flake8]
max-line-length = 120